# mrmat-infra-tooling

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ci/: __init__.py
src/mrmat_infra_tooling/: __init__.py
src/mrmat_infra_tooling/config/: __init__.py  cli.py  config.py  dns_config.py  host_config.py  root_config_aware.py
src/mrmat_infra_tooling/dns_update/: cli.py
src/mrmat_infra_tooling/exceptions/: __init__.py  mrmat_infra_exception.py
var/plist/: org.mrmat.update-dns.plist
